# diffusion

./: .gitignore  Makefile  README.md  codec.py  config.py  config.yml  dataset_variant.py  download_celeba.py  eval.py  main.py  pyproject.toml  trainer.py
dataset/: __init__.py  base.py  celeb.py  celeb_small.py  cifar10.py  factory.py  food101.py  variant.py
models/: __init__.py  adagn.py  adanorms.py  diffusion_model.py  dit.py  ema.py  model.py  model_preset.py  pos_emb.py  resnet.py  time_pos_emb.py  unet.py
models/unet/: resnet.py  time_pos_emb.py  unet.py
schedulers/: __init__.py  base_scheduler.py  cosine.py  linear.py
